<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top" >


<!--         android:background="@drawable/beach_wallpaper"
 -->

    <EditText
        android:id="@+id/signUp_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/login_Username"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/signUp_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUp_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/login_Password"
        android:ems="10"
        android:inputType="textPassword" />
    
   	<EditText
        android:id="@+id/signUp_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUp_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/signUp_Email"
        android:ems="10"
        android:inputType="textEmailAddress" />
   	
   	<EditText
        android:id="@+id/signUp_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUp_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/signUp_phone_string"
        android:ems="10" 
        android:inputType="phone" />
   	   	
    <Button
        android:id="@+id/login_loginButt"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/signUp_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:hint="@string/login_Username"
        android:onClick="signUp"
        android:text="@string/sign_up" />
 
    <Button
        android:id="@+id/signUp_facebook"
        style="@style/com_facebook_loginview_default_style"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/login_loginButt"
        android:onClick="signUpFacebook"
        android:text="@string/signUp_facebook_string" />

</RelativeLayout>