<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top" >


<!--         android:background="@drawable/beach_wallpaper"
 -->

    <EditText
        android:id="@+id/login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:hint="@string/login_Username"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:hint="@string/login_Password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_loginButt"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:onClick="signIn"
        android:text="@string/log_in" />

</RelativeLayout>